# snippets

./: .gitignore  CONTEXT.md  Makefile  PROGRESS_SUMMARY.md  SECURITY_SANITIZATION.md  STATUS.md  languages.txt  moosend.json
ada/functions/: array_operations.adb
ansible/functions/: playbook.yml
apache/functions/: httpd.conf
apl/functions/: hello.apl
arc/functions/: functions.arc
asciidoc/functions/: document.adoc
assembly/functions/: hello_x86.asm
avro/functions/: schema.avsc
awk/functions/: text_processing.awk
bash/functions/: array_operations.sh  file_operations.sh  string_manipulation.sh
basic/scripts/: RefreshDataAndPivots.bas
befunge/functions/: hello.bf
c/functions/: array_operations.c  file_operations.c  pointer_example.c  string_manipulation.c  struct_example.c
c/libs/: string_utils.c
capnproto/functions/: schema.capnp
chicken/functions/: hello.chicken
clojure/functions/: collection_operations.clj  functions.clj
cloudflare/redirects/: country-redirect.js
cmake/functions/: CMakeLists.txt
cobol/functions/: basic_operations.cob
coffeescript/functions/: array_operations.coffee
cpp/functions/: class_example.cpp  file_operations.cpp  map_operations.cpp  string_manipulation.cpp  template_example.cpp  vector_operations.cpp
cpp/libs/: string_utils.cpp
crystal/functions/: array_operations.cr  classes_and_methods.cr
csh/functions/: functions.csh
csharp/functions/: ClassExample.cs  ListOperations.cs  StringManipulation.cs
css/functions/: styles.css
cypher/functions/: query.cypher
d/functions/: array_operations.d  structs_and_classes.d
dart/functions/: async_operations.dart  list_operations.dart
dash/functions/: functions.dash
dhall/functions/: config.dhall
django-templates/functions/: template.html
docker-compose/functions/: docker-compose.yml
dockerfile/functions/: Dockerfile
ejs/functions/: template.ejs
elixir/functions/: list_operations.ex  pattern_matching.ex  string_manipulation.ex
elixir/libs/: string_utils.ex
elixir/scripts/: file_processor.exs
elm/functions/: list_operations.elm
emacs-lisp/functions/: init.el
erb/functions/: template.erb
erlang/functions/: concurrency.erl  list_operations.erl
erlang/libs/: utils.erl
factor/functions/: hello.factor
fennel/functions/: functions.fnl
fish/functions/: functions.fish
forth/functions/: hello.forth
fortran/functions/: array_operations.f90
fsharp/functions/: list_operations.fs  pattern_matching.fs
fsharp/libs/: utils.fs
gdscript/functions/: player.gd
gimp/python-fu/: generate_logo.py
gimp/script-fu/: generate-logo.scm
github-actions/functions/: ci.yml
gitlab-ci/functions/: .gitlab-ci.yml
glsl/functions/: shader.glsl
go/: QUICKREF.md
go/functions/: file_operations.go  json_operations.go  map_operations.go  slice_operations.go  string_manipulation.go  struct_example.go
go/libs/: string_utils.go
go/scripts/: http_client.go  send-email.go
graphql/functions/: schema.graphql
groovy/functions/: list_operations.groovy
haml/functions/: template.haml
handlebars/functions/: template.hbs
haproxy/sms-proxy/: haproxy.cfg  test.lua
haskell/functions/: algebraic_types.hs  list_operations.hs  string_manipulation.hs
haskell/libs/: list_utils.hs
haskell/scripts/: file_statistics.hs
haxe/functions/: array_operations.hx
hlsl/functions/: shader.hlsl
html/functions/: page.html
hy/functions/: functions.hy
idris/functions/: hello.idr
ini/functions/: config.ini
java/functions/: ArrayOperations.java  ClassExample.java  FileOperations.java  StringManipulation.java
java/libs/: StringUtils.java
java/scripts/: HttpClient.java
javascript/: QUICKREF.md
javascript/functions/: array_operations.js  async_operations.js  class_example.js  file_operations.js  json_operations.js  object_operations.js  string_manipulation.js
javascript/libs/: string_utils.js
javascript/scripts/: anura.js  find_two_numbers_that_add_to_target.js  http_server.js
javascript/tmp/: leadflash.js
jinja2/functions/: template.j2
json/functions/: data.json
jsonnet/functions/: config.jsonnet
julia/functions/: array_operations.jl  types_and_functions.jl
kotlin/functions/: class_example.kt  list_operations.kt  map_operations.kt  null_safety.kt  string_manipulation.kt
kotlin/libs/: string_utils.kt
ksh/functions/: functions.ksh
kubernetes/functions/: deployment.yaml
latex/functions/: document.tex
less/functions/: styles.less
liquid/functions/: template.liquid
lisp/functions/: functions_and_macros.lisp  list_operations.lisp  string_operations.lisp
lisp/libs/: list_utils.lisp
lisp/scripts/: file_stats.lisp
livescript/functions/: hello.txt
lolcode/functions/: hello.lol
love2d/functions/: main.lua
lua/: forensiq.lua
lua/functions/: functions_example.lua  string_manipulation.lua  (+1 more)
php/: Manager_lists_model.php  apply_filter.php  argc.php  array_map.php  array_pop.php  birth_year_from_grad_year.php  build_links.php  campaigns.php  class.imbk5.php  clean_phone.php  combine.php  combine_arrays.php  composer.json  contact.php  convert_to_json.php  date.php  date_checker.php  date_range.php  date_test.php  decode.php  distribute_servers.php  empty.php  encoding.php  encrypted_email.php  escape_string.php  extract_domain.php  foreach_array.php  geolocation.php  gethostbyname.php  iconv.php  impressionwise_test.php  ip2long.php  join.php  last_four.php  last_month.php  lead_backup.php  listing.php  lookup_ips.php  lookup_spamtraps.php  mailer.php  (+34 more)
prompts/: TempMonitorPro_Claude_OneShot.prompt.md  creaete-ios-extension.prompt.md  create iphone weather alert app.prompt.md  film_game_one_shot.prompt.md  gmail_migrator_claude_prompt.md
python/: CONTEXT.md  QUICKREF.md  generate_builtin_functions.py
rust/: QUICKREF.md
sql/: create_export_of_wildcard_lists.sql  update_temp_table_with_info.sql
tmp/: BHDirect_WSR_6272_v12.json  db_functions.php  default.php  detect_functions.php  domains  filter_log.json  hotbytes.xml  opener.json  registration_process.php  temp.php  temp.txt  test.tsv  topicaAction.json
(+673 files in other folders)
